syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/shccgxqp/happy_wallet/backend/pb";

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message CreateUserResponse {
  User user = 1;
}